Commit  3 de la Tarde

--- a/fig-web/index.html
+++ b/fig-web/index.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
     <script src="https://kit.fontawesome.com/a076d05399.js" crossorigin="anonymous"></script>
 
+
 </head>
 <body>
     <header>
@@ -32,7 +33,7 @@
             </div>
         </div>
 
-        <!-- Filters Navigation -->
+        <!-- Filters-->
         <div class="filters-nav container">
             <nav class="categories">
                 <a href="#" class="filter-item">Montaña <img src="/images/arrow-down.svg" alt="Flecha hacia abajo" width="12" height="12"></a>
@@ -55,7 +56,7 @@
             
         </div>
 
-        <!-- Hero Section -->
+        <!-- Inicio -->
         <div class="header-content container">
             <div class="content">
                 <span class="tag1">✈️ Explora lo maravilloso que es Loja!</span>
@@ -70,7 +71,7 @@
         </div>
     </header>
 
-    <!-- sponsors aqui  -->
+    <!-- sponsors -->
 <section class="sponsors container">
     <div class="sponsors-grid">
         <div class="sponsor-item">
@@ -229,7 +230,7 @@
             </iframe>
         </div>
 
-        <!-- pOPULAR CERCA DE TI-->
+        <!-- POPULAR CERCA DE TI-->
         <div class="features-grid">
             <div class="feature-card">
                 <div class="feature-icon">🎯</div>
@@ -257,7 +258,7 @@
     <div class="gallery-header">
       <div class="logo-container">
         <span class="conociendo">CONOCIENDO</span>
-        <img src="/imagenes/logo.svg" alt="Turilo!" class="logo">
+        <img src="/images/TuriLo logo.svg" alt="Turilo!" class="logo">
       </div>
       <h1 class="gallery-title">Galería Turística & Blog de Viajes.</h1>
       <a href="#" class="view-all">Ver todos</a>
@@ -310,9 +311,9 @@
     </div>
   
     <div class="testimonials-grid">
-      <!-- Testimonial Card 1 -->
+      <!-- Testimonio 1 -->
       <div class="testimonial-card">
-        <img src="path-to-your-image-1.jpg" alt="Lucas Galih" class="profile-image">
+        <img src="/images/señor.png" alt="Lucas Galih" class="profile-image">
         <div class="testimonial-content">
           <p class="testimonial-text">
             <span class="turilo">TuriLo!</span> me ayudó a encontrar nuevos lugares turísticos en Loja con facilidad
@@ -329,7 +330,7 @@
         </div>
       </div>
   
-      <!-- Testimonial Card 2 -->
+      <!-- Testimonio 2  con xamp hay que añadri las fotos con la ruta /fig-web/images/yo2.png y con live server no es necesario-->
       <div class="testimonial-card">
         <div class="doodle">✎</div>
         <img src="/images/yo2.png" alt="Ruben Cabrera" class="profile-image">
@@ -351,7 +352,7 @@
   
       <!-- Testimonial Card 3 -->
       <div class="testimonial-card">
-        <img src="path-to-your-image-3.jpg" alt="Petrik Carrion" class="profile-image">
+        <img src="/images/turista.png" alt="Petrik Carrion" class="profile-image">
         <div class="testimonial-content">
           <p class="testimonial-text">
             La Cascada Namanda se volvió muy visitada cuando la añadí a <span class="turilo">TuriLo!</span>
@@ -375,7 +376,7 @@
     <div class="faq-header">
       <div class="header-top">
         <span class="preguntas-text">PREGUNTAS FRECUENTES</span>
-        <a href="#" class="ver-todos">Ver todos</a>
+        <a href="#" class="ver-todos">Ver más</a>
       </div>
       <div class="title-container">
         <span class="thinking-emoji">🤔</span>
@@ -384,7 +385,9 @@
     </div>
   
     <div class="faq-list">
-      <!-- FAQ Item 1 -->
+
+
+      <!-- FAQ 1 -->
       <div class="faq-item">
         <div class="faq-header">
           <h3>¿Por qué falló mi pago? 😔</h3>
@@ -392,7 +395,7 @@
         </div>
       </div>
   
-      <!-- FAQ Item 2 -->
+      <!-- FAQ 2 -->
       <div class="faq-item">
         <div class="faq-header">
           <h3>¿Es Ruben Cabrera el CEO de Turilo!? 😎😎😎</h3>
@@ -400,7 +403,7 @@
         </div>
       </div>
   
-      <!-- FAQ Item 3 - Expanded -->
+      <!-- FAQ 3 -->
       <div class="faq-item expanded">
         <div class="faq-header">
           <h3>¿Por qué elegir <span class="turilo">TuriLo!</span>?</h3>
@@ -413,7 +416,7 @@
         </div>
       </div>
   
-      <!-- FAQ Item 4 -->
+      <!-- FAQ 4 -->
       <div class="faq-item">
         <div class="faq-header">
           <h3>Como puedo entrar a un grupo? 😅</h3>
@@ -421,7 +424,7 @@
         </div>
       </div>
   
-      <!-- FAQ Item 5 -->
+      <!-- FAQ  5 -->
       <div class="faq-item">
         <div class="faq-header">
           <h3>¿Qué lugares recomiendas para solteros? 😅😛</h3>
@@ -460,7 +463,7 @@
                 <li><i class="fa-solid fa-location-dot"></i> Loja, Ecuador</li>
                 <li><i class="fa-solid fa-phone"></i> +593-09-765-1153</li>
             </ul>
-            <p>© 2023–2024, Todos los derechos reservados</p>
+            <p>© 2024–2025, Todos los derechos reservados</p>
         </div>
         <div class="footer-right">
             <div class="footer-column">
